<resources>
    <string name="app_name">ncfoa</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="we_will_send_you_an_one_time_password_on_this_mobile">we will send you an One Time Password on this mobile</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="_91">+91</string>
    <string name="_1234567890">1234567890</string>
    <string name="get_otp">Get OTP</string>
    <string name="enter_otp_sent_to">Enter OTP sent to</string>
    <string name="didn_t_receive_the_otp">Didn\'t receive the OTP</string>
    <string name="verify">Verify</string>
    <string name="_91_">+91-</string>

    <string name="navigation_open">Open navigation drawer</string>
    <string name="navigation_close">Close navigation drawer</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_payments">Payments</string>
    <string name="menu_order_history">Order History</string>
    <string name="menu_qr_scanner">QR Scanner</string>
    <string name="table_menu">Menu</string>
    <string name="menu_order_current">Current Order</string>
    <string name="menu_app_help">Help</string>

    <string name="open">Open</string>
    　　　
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="data">data</string>
    <string name="btn_scan_now">Scan</string>


    <string-array name="categories">
        <item>Starters</item>
        <item>Main Course</item>
        <item>Veg</item>
        <item>Non-Veg</item>


    </string-array>
</resources>